infra/proxy/ollama.home/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: ollama-home-proxy
  namespace: infra
subsets:
  - addresses:
      - ip: 10.0.0.105
    ports:
      - port: 11434
