infra/proxy/ollama.home/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-home-proxy
  namespace: infra
spec:
  ports:
    - port: 11434
      targetPort: 11434
  clusterIP: None
