infra/proxy/ollama.home/ingress-internal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ollama-home-internal
  namespace: infra
  annotations:
    cert-manager.io/cluster-issuer: root-ca-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  rules:
    - host: ollama.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ollama-home-proxy
                port:
                  number: 11434
  tls:
    - hosts:
        - ollama.home
      secretName: ollama-home-internal-tls
